# network-config-parser

./: .gitignore  Dockerfile  README.md  env-example  parser.sh  pyproject.toml  requirements.txt
carrierethernet-parser/: .gitignore  TODO  env-example  readme.md  run-carrierethernet-parser.sh  run-cpe-parser.sh  run.sh  update-hosts.sh
carrierethernet-parser/docs/: ers-parser.v1-0.rst
carrierethernet-parser/webapp/: README.pm  app.py  generate_colours.py
carrierethernet-parser/webapp/static/data/: mpls.json  netjson-custom.json  netjson-network-collection.json  ring.json
carrierethernet-parser/webapp/static/js/: netjsongraph.js
carrierethernet-parser/webapp/static/python/: graph.json
carrierethernet-parser/webapp/templates/: index2.html  index3.html  index4.html
functions/: entrypoint.sh
router-parser/: README.md  add-network-discovery.py  config.py  env-example  main.py  router-parser.py  run.sh
router-parser/configs/test/: NOS-ASR-01.txt  belbelgium01-02bra-ci.txt
router-parser/etc/: logging.conf
router-parser/lib/: cpemodule.py  reporter.py  router.py
