[tool.poetry]
name = "network-config-parser"
version = "0.1.0"
description = "Network config parser for Cisco routers and Ciena SAOS endpoints"
authors = ["Maarten Wallraf <mwallraf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
